ajout de la modification de la doc et put utiliser pour marquer un message comme lu ou non-lu
